# smartCar

./: .gitignore
image_annotator/: setup.cfg  setup.py
image_annotator/image_annotator/: image_annotator.py
image_annotator/launch/: bringup_vision_annotated.launch.py  image_annotator.launch.py
qrcode/src/: qrcode.cpp
racing_control/: CMakeLists.txt  package.xml
racing_control/launch/: post_qr_test.launch.py  racing_control.launch.py  racing_control_fsm.launch.py
racing_control/src/: control_master.cpp  post_qr_control.cpp  racing_control.cpp  racing_control_fsm.cpp
racing_obstacle_detection_yolo/config/: yolov5sconfig.json
racing_obstacle_detection_yolo/launch/: racing_obstacle_detection_yolo.launch.py
racing_obstacle_detection_yolo/src/: sample.cpp
racing_track_detection_resnet/launch/: racing_track_detection_resnet.launch.py
racing_track_detection_resnet/src/: racing_track_detection.cpp
src/image_annotator/: package.xml  setup.py
src/racing_control/: CMakeLists.txt
src/vision_language_model/: setup.py  start_all.sh
src/yellow_track_opencv/: package.xml  setup.py
src/yellow_track_opencv/launch/: yellow_track_opencv.launch.py
src/yellow_track_opencv/yellow_track_opencv/: yellow_track_opencv.py
vision_language_model/: package.xml
vision_language_model/vision_language_model/: image_display.py  vision_language_model.py  ws_image_bridge.py
yellow_track_opencv/: package.xml  setup.cfg  setup.py
yellow_track_opencv/launch/: yellow_track_opencv.launch.py
yellow_track_opencv/resource/: yellow_track_opencv
(+18 files in other folders)
